# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  create_config.py  main.py  maze_display.py  requirements.txt
mazegen-1.0.0/: README.md  pyproject.toml
mazegen-1.0.0/package/: mazegen.py
mazegen-1.0.0/package/mazegen.egg-info/: PKG-INFO
package/: README.md  mazegen.py
