[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Generador/solucionador de laberintos"
authors = [
    {name = "spujol-s"},
    {name = "esucarra"}
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "package"}
py-modules = ["mazegen"]